2.4.30
- Make loot cap applicable for curse of greed as well

2.4.29
- Master trait summon minions can now attach custom entity config
- Now Spectator cannot trigger Incarceration ring, and it won't affect spectators and creative players.
- Fix Pocket of Restoration returning item to dead player
- When Slime with Growth trait is killed by command, remove that slime without splitting
- (config: default off) Nidhoggur cannot increase drop over max stack size
- (config: default off) Disable book overstacking from Book of Reprint. Add extra to player inventory directly.

2.4.28
- Allow level default trait config
- Limit 1-per-item for curios
- Mobs summoned by Master trait will attempt to teleport toward owner when left behind

2.4.27
- Fix a rare shulker trait crash
- Fix lv.0 traits generated

2.4.26
- Fix Master Trait crash
- Pulling and Repelling won't move spectator
- Gravity grounds attack on hurt

2.4.25
- Fix Master summoned minions fight each other
- Traits won't show stat bonus if it's 0

2.4.24
- Fix distance difficulty factor over 40k blocks
- Add master trait, default on Ignis and Ancient Remnant
- Orb usable only when having glasses and detector
- Add drops to Arena and Master trait
- Add Mowzie's mobs compatibility
- Add command to set level, set trait, remove trait, and clear all traits
- Add config for max mob level
- Add datapack config entry for mob-specific max level ("maxLevel in entity config")
- Add methods for KubeJS to get and set hostility data

2.4.23
- Hostility Beacon render fix
- Fix Trait Generation
- Gateways compat for Split and Growth

2.4.22
- Hostility Beacon
- Mutant Monster compat
- GeckoLib invisiblity glowing fix
- Gateway to Eternity config support
- Allow banning mob spawn that is lower than certain level
- minor performance improvement

2.4.21
- Add armor spawn config datapack
- Add config for trident spawn on drowned
- Add config for spawner spawned hostility loot drop rate
- Improve client side performance